--- a/webserver-puppetversions.sec.domain.com/apiv1/.htaccess
+++ b/webserver-puppetversions.sec.domain.com/apiv1/.htaccess
@@ -7,6 +7,7 @@
 
         RewriteCond     %{REQUEST_FILENAME} !-d
         RewriteCond     %{REQUEST_FILENAME} !-f
+        RewriteCond     %{REQUEST_URI} !^/index.php
         RewriteCond     %{REQUEST_URI} !=/favicon.ico
         RewriteRule     ^(.*)$ index.php/$1 [L,QSA]
 
